# nkv

./: Cargo.toml  Dockerfile  README.md  config.toml
.github/actions/build-and-test/: action.yml
.github/workflows/: main_ci.yml  pr_ci.yml  release_ci.yml  rust.yml
benches/: nkv_bench.rs
docs/: CLIENT_SERVER_PROTOCOL.md  CODING_RUST.md  DESIGN.md  DESIGN_DECISIONS.md  KEYSPACE.md
src/: client.rs  errors.rs  flag_parser.rs  lib.rs  main.rs  nkv.rs  notifier.rs  persist_value.rs  request_msg.rs  srv.rs  traits.rs  trie.rs
src/client/: main.rs
src/server/: main.rs  srv.rs
