[package]
name = "nkv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
futures = "0.3.30"
http = "1.1.0"
http-serde = "2.1.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tempdir = "0.3"
tempfile = "3.10.1"
tokio = { version = "1.39.1", features = ["full"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
