[package]
name = "nkv"
version = "0.1.1"
edition = "2021"

[dependencies]
tempfile = "3.10.1"
tokio = { version = "1.39.1", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
base64 = "0.22.1"
dirs-next = "2.0.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
tracing = "0.1.41"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
anyhow = "1.0.86"

[lib]
name = "nkv"
path = "src/lib.rs"

[[bin]]
name = "nkv-server"
path = "src/server/main.rs"

[[bin]]
name = "nkv-client"
path = "src/client/main.rs"

[[bench]]
name = "nkv_bench"
harness = false

[profile.release]
strip = true  # Automatically strip symbols from the binary
# opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
